src/styles/piaf.scss
@import "bootswatch/dist/slate/_variables";

// Bootstrap customisation
$form-range-thumb-width:          2rem;
$form-range-thumb-height:         2rem;
$form-range-thumb-border-radius:  1rem;
$form-range-thumb-bg:             $gray-700;

@import "bootstrap/scss/bootstrap";

// Piaf-specific bits

.banner-path-item:not(:first-child)::before {
    content: "/";
    margin-left: 8px;
    margin-right: 8px;
}

nav + div {
    margin-top: 64px;  // is also updated by JS
    margin-bottom: 80px;
}

.piaf-media-table {
    .btn-link {
        --bs-btn-padding-y: 0px;
    }

    button.piaf-play-icon {
        --bs-btn-padding-x: 2px;
    }

    col:nth-child(1) {
        width: 24px;
    }
    col:nth-child(3) {
        width: 0;  // sets to 'as small as possible', not invisible
    }
}

.footer {
    border-top: 4px solid var(--bs-body-bg);
    padding-top: 8px;
    padding-bottom: 8px;
}

.volume-container {
    width: 25%;
}

#speed-menu-button {
    min-width: 6em;  // stop the button fluctuating in size
}

/* controls page: 2x2 grid, plus a full-width slider */
.piaf-controls-row-1 {
    position: fixed;
    top: 10%;
    height: 30vh;
}

.piaf-controls-row-2 {
    position: fixed;
    top: 50%;
    height: 30vh;
}

.piaf-controls-col-1 {
    position: fixed;
    left: 20%;
}

.piaf-controls-col-2 {
    position: fixed;
    right: 20%;
}

.piaf-controls-row-3 {
    position: fixed;
    top: 80%;
    left: 20%;
    right: 20%;
    height: 96px;
}

